# Modern_Programming

./: .gitignore  README.md
HW1/: CMakeLists.txt  intr_sort.cpp  intr_sort.h  main.cpp
HW2/: CMakeLists.txt  intr_sort.cpp  intr_sort.h  io_arr.cpp  io_arr.h  main.cpp
Lesson 4/: ibusko_base_theory.cpp
Lesson3/:  BuskoIlya_merge_sort_edition.cpp  Asulimov_merge_sort.cpp  sulimov_merge_sort.cpp
Menu_Task/: .gitignore  CMakeLists.txt  element_functions.cpp  element_functions.h  main.cpp  menu.h  menu_elements.cpp  menu_elements.h  my_program
Menu_Task_exam/: CMakeLists.txt  element_functions.cpp  element_functions.h  main.cpp  menu.h  menu_elements.cpp  menu_elements.h
S2_T1/: .gitignore  README.md  build.sh  run_all_gtests.sh
S2_T1/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
S2_T1/build_ninja/HW4_base_theory/: CTestTestfile.cmake  S2_T1  cmake_install.cmake
S2_T1/build_ninja/Unit_Tests/: CTestTestfile.cmake  cmake_install.cmake  hw1_test_run
S2_T1/build_ninja/Unit_Tests/lib/: CTestTestfile.cmake  cmake_install.cmake
S2_T1/build_ninja/Unit_Tests/lib/googlemock/: CTestTestfile.cmake  cmake_install.cmake
S2_T1/build_ninja/Unit_Tests/lib/googletest/: CTestTestfile.cmake  cmake_install.cmake
S2_T1/build_ninja/hw1_insertion_sort/: CTestTestfile.cmake  HW1_insertion_sort  cmake_install.cmake
S2_T1/build_ninja/hw1_insertion_sort/src/: CTestTestfile.cmake
S2_T1/build_ninja/menu_task/: CTestTestfile.cmake  Menu_Task  cmake_install.cmake
S2_T1/src/: CMakeLists.txt
S2_T1/src/HW4_base_theory/: main.cpp
S2_T1/src/Unit_Tests/: CMakeLists.txt  hw1_tests.cpp
S2_T1/src/Unit_Tests/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
S2_T1/src/Unit_Tests/cmake-build/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
S2_T1/src/Unit_Tests/cmake-build/lib/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
S2_T1/src/Unit_Tests/cmake-build/lib/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
S2_T1/src/Unit_Tests/tests/: CMakeLists.txt  hw1_tests.cpp
S2_T1/src/hw1_insertion_sort/: CMakeCache.txt  CMakeLists.txt  HW1_insertion_sort  Makefile  cmake_install.cmake  intr_sort.cpp  intr_sort.h  main.cpp
S2_T1/src/hw1_insertion_sort/src/: CMakeLists.txt  intr_sort.cpp  intr_sort.h
S2_T1/src/menu_task/src/: menu.h  menu_elements.cpp
S2_T2/: .gitignore  README.md  benchmark_scl.sh  compile_all.sh  run_all_SCL_gtests.sh  run_all_hw1_gtests.sh
S2_T2/src/: CMakeLists.txt
S2_T2/src/HW4_base_theory/: CMakeLists.txt
S2_T2/src/SCL/Long_Numbers/: CMakeLists.txt  main.cpp
S2_T2/src/SCL/Long_Numbers/src/: CMakeLists.txt  long_number.cpp  long_number.hpp
S2_T2/src/Unit_Tests/: CMakeLists.txt  hw1_tests.cpp
S2_T2/src/Unit_Tests/SCL_tests_dir/: CMakeLists.txt  SCL_tests.cpp
S2_T2/src/Unit_Tests/hw1_tests_dir/: CMakeLists.txt  hw1_tests.cpp
S2_T2/src/hw1_insertion_sort/: CMakeLists.txt
S2_T2/src/hw1_insertion_sort/src/: CMakeLists.txt  Makefile  cmake_install.cmake
S2_T2/src/menu_task/: CMakeLists.txt  main.cpp
S2_T2/src/menu_task/src/: menu_elements.h
ZSH + NVIM CONF/: .z  .zcompdump-MacBook Air — alicee-5.9  .zsh_history  .zshrc
google_test_example/: CMakeLists.txt  README.md  main.cpp
google_test_example/GT/: CMakeLists.txt  test1.cpp
google_test_example/src/: CMakeLists.txt  code_example.cpp  code_example.hpp
